# tpu-perf

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  blob.proto
.github/workflows/: build.sh  ci.yaml  download_dataset.sh  pytest.sh  pytest.yaml
cmake/: Findsg.cmake  aarch64-toolchain.cmake  bdist.sh.in  dummy.cpp  postinst.cmake
dependencies/: .gitignore
docker/: .gitignore  Dockerfile  README.txt
example/: README.md  config.yaml
example/pnet/: config.yaml  pnet.prototxt
pipeline/: SGCommonUtils.cpp  SGCommonUtils.h  SGDevicePool.cpp  SGDevicePool.h  SGDeviceUtils.cpp  SGDeviceUtils.h  SGEnv.h  SGLog.cpp  SGLog.h  SGNetwork.cpp  SGNetwork.h  SGPipelinePool.cpp  SGPipelinePool.h  SGQueue.cpp  SGQueue.h  SGThreadPool.cpp  SGThreadPool.h  interface.cpp  interface.h
pytest/: Dockerfile  conftest.py  pytest.ini  requirements.txt  test_efficiency.py  test_precision.py  utils.py
python/: .gitignore  MANIFEST.in  setup.py
python/tpu_perf/: build.py  buildtree.py  eject.py  infer.py  io.py  make_lmdb.py  make_table.py  precision_benchmark.py  preprocess.py  run.py  subp.py  util.py
python/tpu_perf/harness/: __init__.py  topk.py
